# Cydiapps

./: .gitattributes  Class-dump.md  Dumpdecrypted.md  LICENSE  PP Download.js  README.md  Reveal.md  Theos.md  class-dump-3.5.dmg  frida-ios-dump 一键砸壳 .rtf
AlipayRe/: APListData.h  APListData.m  AUToast.h  H5WebViewController.h  H5WebViewController.m  Makefile  PSDJsBridge.h  Tweak.xm  control
AlipayRe/.theos/: last_package
An iOS system log tailer that doesn't suck/: .gitignore  Makefile  MobileDevice.framework  MobileDevice.h  main.c
Apple hardware secrets/: .gitignore  Makefile  README.md  aprr.s  parse.c  yolo.c
Apple hardware secrets/docs/: README.md  index.md
CaptainHook_h/: CaptainHook.h
Cydia/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  main.m
Cydia for Electra/: Sources.mm  apt.h  cfversion.mm  control.sh  cydia.control  cydo.cpp  entitlements.xml  iPhonePrivate.h  make.sh  makefile  postinst.mm  setnsfpn.cpp  sysroot.sh
Cydia.xcodeproj/: project.pbxproj
Cydia_Build_cpp/: Cytore.hpp  DiskUsage.cpp  MobileCydia.mm  Sources.h  Substrate.hpp  Version.mm  compiling.txt  cydia-lproj.control  cydo.cpp  entitlements.xml  genent.xml  lookup3.c  makefile  pngcrush.sh  postinst.mm  preinst  uikit.sh  version.sh
Cydia插件开发/小插件/: Makefile  (+3 more)
DingTalkGPSFaker/: Makefile  README.md  Tweak.xm  control
DingTalkHelper/: DingTalkAssistant.plist  Makefile  Tweak.xm  control
Dumpdecrypted(给ipa砸壳)/: README.md
Electra_patched/: VERSION.txt  ldrestart.cpp  login.c  openssh.txt  reboot.c  sbreload.c  su.c  umount.c
FLEX/: Makefile  Tweak.xm  build_dylib.sh  control
FLEX for deb/: Makefile  README.md  control
IDFA、IDFV、UDID/: IDFA、IDFV、UDID.rtf
IPAForce/: Podfile  README.md
JailbreakAppTools/: Makefile  README.md
KeychainIDFA-获取idfa标示当设备唯一识别,并保存到keychain中.基本不变.除非刷机./: README.md
LLDebugTool/: CHANGELOG.md  LLDebugTool.podspec  Podfile  README-cn.md  README.md
MacPorts/: MacPorts-2.6.2-10.13-HighSierra.pkg  MacPorts-2.6.2-10.14-Mojave.pkg  MacPorts-2.6.2-10.15-Catalina.pkg
MachOView-修改版/: README.md
MonkeyDev/: 终端安装.rtf
PhoenixNonce/: .gitignore  LICENSE  Makefile  README.md
Preferenceloader/: .gitignore  .gitmodules  Makefile  PreferenceLoader.plist  README.md  Tweak.xm  control  debug.h  prefs.h  prefs.xm
ReProvision deb安装包/: 安装说明.rtf
Redsn0w inspired GUI for Checkm8/: README.md
SockPort 2.0 exploit/: Makefile  README.md
Theos NIC templates/: sbsettingstoggle.nic.tar
Unix Tools Cydia:APT repo for arm64 iOS devices. electrarepo64.coolstar.org/: org.coolstar.sileo_0.3b1_iphoneos-arm.deb
WeChatHelper-master/: README.md
cl0ver/: .gitignore  LICENSE  Makefile  README.md
frida/frida-cycript/: .gitignore  .gitmodules  README.md  meson.build  meson_options.txt
frida/frida-cycript/bindings/node/cylang/: addon.cpp  binding.gyp  binding.version  index.js  package-lock.json  package.json
frida/frida-cycript/bindings/node/cylang/test/: compiler.js
frida/frida-cycript/scripts/: detect-xcode-clang-libdir
frida/frida-cycript/src/: Analysis.cpp  Analyze.cpp  Bridge.cpp  Bridge.def.in  Bridge.hpp  Bridge.old  Code.hpp  Complete.cpp  Console.cpp  Decode.cpp  Decode.hpp  Driver.cpp  Driver.hpp  Error.cpp  Error.hpp  Exception.hpp  Execute.cpp  Execute.hpp  Functor.hpp  Highlight.cpp  Highlight.hpp  IdentifierContinue.h  IdentifierStart.h  Internal.hpp  JavaScript.hpp  Library.cpp  List.hpp  Local.hpp  Location.hpp  NotLineTerminator.l  Options.hpp  Output.cpp  Parser.ypp.in  Pooling.hpp  Replace.cpp  Replace.hpp  Scanner.lpp.in  Stack.hpp  Standard.hpp  String.hpp  (+20 more)
frida/frida-cycript/src/Agent/: index.js
frida/frida-cycript/src/E4X/: Syntax.hpp
frida/frida-cycript/src/Java/: Cycript.java
frida/frida-cycript/src/ObjectiveC/: Internal.hpp  Library.mm  Output.cpp  Replace.cpp  Syntax.hpp
frida/frida-cycript/src/cycript0.9/com/saurik/substrate/: MS.cy
frida/frida-cycript/src/extra.arm64/: ncurses_dll.h  readline  term.h
frida/frida-cycript/src/sig/: copy.cpp  parse.cpp  parse.hpp  types.hpp
frida/frida-cycript/test/: addon.cpp  binding.gyp  binding.version  package-lock.json  package.json  types.js
iOS Platform/: clutch  iret  keychain_dumper  respring  socat
iOS-Reverse/: Makefile  TXVideoPod.h  TXVideoPod.m  Tweak.xm  control  iOSREWeChatView.plist
iOSOpenDev/: README.md
iOSOpenDev 安装脚本/: iOSOpenDev 安装脚本.rtf  iOSOpenDev-1.6-2.pkg  iOSOpenDev-Install.sh
iOS免密登录ssh/: README.md  install.sh  issh.sh
iOS攻防/: README.md
iOS逆向工具库/: dpkg-deb  dumpdecrypted.dylib  ldid  libsubstrate.dylib
iOS非越狱环境模拟点击framework/: README.md
injector Xcode sh/: XcodeSign.sh
kernel_Injector/: Makefile  control  inject.m  kern_funcs.c  kern_funcs.h  main.m
libactivator-headers/: UIImageView+Activator.h  libactivator.h
macOS Platform/: dyld_decache  insert_dylib  jtool  mach_inject  optool  ppdownload.py  profile_signer.py  restore-symbol  yololib
rootlessJB 越狱 iOS 12.0 - 12.2 & 12.4/: README.md
rootlessJB3/: .gitignore  README.md  patcher
saigon/: .gitignore  README.md  compile.sh
shell-deb-自动化打包/: README.md  vimrc  vimrc.bundles
theos-nic-templates_插件开发模板/: README
unc0ver/: unc0ver.md
wxtool.deb/: wxtool.deb
代码注入dylib/: README.md
基于Cycript实现的一些实用函数/: Cydiacript.cy  README.md
微信-集赞-插件/: LICENSE  Makefile  Morezan.xm  README.md  Tweak.xm  WBBaseViewController.h  WBBaseViewController.m  WBMultiSelectGroupsViewController.h  WBMultiSelectGroupsViewController.m  WBSettingViewController.h  WBSettingViewController.m  XEditViewController.h  XEditViewController.m  build.sh  control  xia0WeChat.h
手势插件Neptune/: README.md
新的插件商店 Saily/: .bartycrouch.toml  .gitignore  .swiftlint.yml  Gemfile  LICENSE  LatestBuild  Podfile  README.md
混淆脚本工具/: addNativeCode.py  autoBornCode.py  renameNative.py  word_list.json
签名工具ldid/: Makefile  README.md  arid.cpp  control  control.sh  ios.sh  ldid  ldid.cpp  ldid2  ldid2.cpp  make.sh  sha1.c  sha1.h  sha224-256.c  version.sh
自动安装theos工具/: Function.sh  README.md  TheosScript.sh
解包:打包 deb 工具/: MacPorts-2.5.4-10.14-Mojave.pkg
钉钉自动抢红包/: LatestBuild  README.md  podfile
(+9095 files in other folders)
